WebDriver Input clear/value commands fails when target is inside shadow dom https://bugs.webkit.org/show_bug.cgi?id=209233

Patch by Nitzan Uziely <nitzan@testim.io> on 2020-10-05
Reviewed by Brian Burg.

Source/WebCore:

Add support for nested shadow DOM in isDescendantOrShadowDescendantOf,

* dom/Node.cpp:
(WebCore::Node::isDescendantOrShadowDescendantOf const):
* dom/Node.h:
(WebCore::Node::isDescendantOrShadowDescendantOf const):

Source/WebKit:

Fixed nodeIsElement which would return true for non-element nodes,
which caused an exception to be thrown when getComputedStyle was called
on non shadow elements.

Fixed computeElementLayout to consider shadow root descendants as descendants
when executing elementsAtPoint.

Test for WPT (https://github.com/web-platform-tests/wpt/pull/25962)

* UIProcess/Automation/atoms/ElementDisplayed.js:
(isShown.nodeIsElement):
(isShown.enclosingNodeOrSelfMatchingPredicate):
(isShown.enclosingElementOrSelfMatchingPredicate):
* WebProcess/Automation/WebAutomationSessionProxy.cpp:
(WebKit::WebAutomationSessionProxy::computeElementLayout):

Canonical link: https://commits.webkit.org/230087@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@267978 268f45cc-cd09-0410-ab3c-d52691b4dbfc